1.3.30
Added: Configs to enable/disable healing events for items. These are now enabled by default (they were disabled for some reason, disable if you have issues)
Added: Track number of heart containers used in statistics (unable to do other items at this time)
Fixed: A possible (rare?) crash when joining a LAN game or server (#141)

1.3.29
Added: Configs to tweak health text position (#133)
Added: Sound events for all heart items (for resource pack makers, the default sounds are the same)
Fixed: Blight fires being too dark
Fixed: Mobs continuously redoing difficulty logic when health increases are disabled and difficulty is not
Fixed: Commands not working in LAN games
Fixed: Error when loading world data

1.3.28
Partial config code rewrite. Shouldn't change anything, but let me know if anything seems broken.
Added: Configs to restrict bonus regen by player health. For example, you could set players to only regen up to a certain number of hearts. Or not regen below a certain number if you're feeling evil.
Fixed: Blight death messages being broken (does not completely translate however, working on it)
Fixed: Blight fires spawning infinitely in some cases

1.3.27
Update difficulty meter textures (Z-Tunic)
Added: Config to change absorption heart style. Options are SHIELD, GOLD_OUTLINE, and VANILLA (#115)
Fixed: Hearts and absorption hearts rendering incorrectly in hardcore mode (#132)
Fixed: Sleep warning never showing

1.3.26
Updated heart textures (Z-Tunic)

1.3.25
Changed: The way hearts render when poisoned/withered
Fixed: Some items missing models (#128)
Fixed: Last heart outline missing or in wrong position (#129)
Fixed: Some issues with localizations

1.3.24
Updated es_VE.lang (Allinxter_910)
Added: pt_BR.lang (Diego Ramos)
Added: Config to disable vanilla hearts row and use only custom hearts (#123)
Added: Entity properties for loot tables, scalinghealth:is_blight and scalinghealth:difficulty. See wiki for details (#106)