@@ -1,4 +1,5 @@
 1.3.30
+Added: Absorption text, similar to the health text displayed to the left of hearts. Cannot display a max amount, as vanilla does not have any concept of max absorption. The GREEN_TO_RED color style will not work correctly because of this.
 Added: Configs to enable/disable healing events for items. These are now enabled by default (they were disabled for some reason, disable if you have issues)
 Added: Track number of heart containers used in statistics (unable to do other items at this time)
 Fixed: A possible (rare?) crash when joining a LAN game or server (#141)
